src/MessagingThreadHistory/MessageMetadata.less
@import (reference) "../less/index";

.MessageMetadata--Message--center {
  .margin--y--l();
  margin-left: auto;
  margin-right: auto;
  .flexbox();
  .text--center();
  // Without this, messages 'bunch up' on Safari.
  flex-shrink: 0;
}

.MessageMetadata--Message--right {
  .margin--y--m();
  .margin--x--xs();
  .flexbox();
  flex-direction: row-reverse;
  align-items: center;
  // Without this, messages 'bunch up' on Safari.
  flex-shrink: 0;
}

.MessageMetadata--Message--left {
  .margin--y--m();
  .margin--x--xs();
  .flexbox();
  flex-direction: row;
  align-items: center;
  // Without this, messages 'bunch up' on Safari.
  flex-shrink: 0;
}

.MessageMetadata--Timestamp--right {
  .margin--right--xs();
  font-size: 0.875rem;
  .text--line-height-1();
  color: @neutral_medium_gray;
}

.MessageMetadata--Timestamp--left {
  .margin--left--xs();
  font-size: 0.875rem;
  .text--line-height-1();
  color: @neutral_medium_gray;
}

// For mobile/tablet
@media only screen and (max-width: @breakpointM) {
  .MessageMetadata--Message--right {
    .margin--y--xs();
  }

  .MessageMetadata--Message--left {
    .margin--y--xs();
  }
}

